--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -8,7 +8,7 @@
     {% include "home/includes/index-sm-sidebar.html" %}
             {% for section in section_roots %}
                 {% if section.name == "news" %}
-                <div id="{{ section.title }}" class="large-container">
+                <div id="{{ section.title }}" class="medium-container">
                     <h2 class="container display-4 mb-4 py-2 text-center text-uppercase section-header"><a href="{% url "home:view_section" section.name %}">{{ section.title }}</a></h2>
                     
                     <div class="row mb-4">
@@ -36,7 +36,7 @@
                             <div class="row">
                             {% for story in section.all_stories.all|slice:"1:5"%}
                                 {% if not forloop.counter|divisibleby:"2" %}<div class="col-md-6 px-0">{% endif %}
-                                    <div class="card align-middle mb-2 rounded-0 section-card-0">
+                                    <div class="card mb-2 rounded-0 section-card-0">
                                         <div class="img-wrapper">
                                             <img class="card-img-top mx-auto rounded-0 d--block" src="{% if forloop.counter|divisibleby:"4"  %}
                                                 {% static "home/images/img_4.jpg" %}
@@ -49,8 +49,8 @@
                                                 {% endif %}"  alt="featurette-img"/>
                                         </div>
                                         <div class="card-body">
-                                                <h6 class="authors font-weight-bold">{% include "home/utils/authors.html" with content=story %}</h6>
-                                                <p class="story-created">{{ story.created }}</p>
+                                                <h6 class="authors d-inline-block">{% include "home/utils/authors.html" with content=story %}</h6>
+                                                <h6 class="d-inline-block w-auto text-left">{{ story.created }}</h6>
                                                 <h4 class="card-title"><a href="{% url "home:view_content" story.pk %}" class="solid-link">{{ story.title|safe }}</a></h4>
                                         </div>
                                     </div>
@@ -82,7 +82,7 @@
 
                                         <div class="card align-middle rounded-0 mb-4 section-card-1">
                                             <div class="img-wrapper">
-                                                <img class="card-img-top mx-auto rounded-0 d--block" src="{% if forloop.counter|divisibleby:"4"  %}
+                                                <img class="card-img-top mx-auto rounded-0 d-block" src="{% if forloop.counter|divisibleby:"4"  %}
                                                     {% static "home/images/img_4.jpg" %}
                                                  {% elif forloop.counter|divisibleby:"3" %}
                                                     {% static "home/images/bird.jpg" %}
@@ -104,6 +104,7 @@
                                                  </p>
                                              </div>
                                         </div>
+
                                 {% if forloop.counter|divisibleby:"2" %}</div>{% endif %}
                             {% endfor %}
                         </div></div>
@@ -111,15 +112,57 @@
                         <hr class="mt-3 mb-5" />
                     </div>
 
-                {% elif section.name == "lifestyle" %}
+                {% elif section.name == "sports" %}
                     <h2 class="container display-4 mb-4 py-2 text-center text-uppercase section-header"><a href="{% url "home:view_section" section.name %}">{{ section.title }}</a></h2>
 
-                    <div class="row">
-                    {% for story in section.all_stories.all|slice:"5" %}
-                    
-                        
-                    
-                    {% endfor %}
+                    <div class="medium-container">
+                        <div class="row">
+                            <div class="col-md-9">
+                                <div class="row">
+                                    {% for story in section.all_stories.all|slice:"6" %}
+                                        {% if forloop.first or forloop.counter|divisibleby:"4" %}<div class="col-6">{% endif %}
+
+                                            <div class="card align-middle rounded-0 mb-4 section-card-2">
+                                                <div class="card-body">
+                                                    <div class="card-body-top d-inline-block mb-3">
+                                                            <img class="card-img-top mx-auto rounded-0 d-block" src="{% if forloop.counter|divisibleby:"4"  %}
+                                                                {% static "home/images/img_4.jpg" %}
+                                                                {% elif forloop.counter|divisibleby:"3" %}
+                                                                {% static "home/images/bird.jpg" %}
+                                                                {% elif forloop.counter|divisibleby:"2"  %}
+                                                                {% static "home/images/chair.jpg" %}
+                                                                {% else %}
+                                                                {% static "home/images/grass.jpg" %}
+                                                                {% endif %}"  alt="featurette-img"/>
+                                                    </div>
+                                                    <div class="card-body-bottom d-inline-block">
+                                                        <h6 class="authors font-weight-bold">{% include "home/utils/authors.html" with content=story %}</h6>
+                                                        <p class="story-created">{{ story.created }}</p>
+                                                        <h4 class="card-title"><a href="{% url "home:view_content" story.pk %}" class="solid-link">{{ story.title|safe }}</a></h4>
+                                                    </div>
+                                                </div>
+                                            </div>
+
+                                        {% if forloop.counter == 3 or forloop.last %}</div>{% endif %}
+                                    {% endfor %}
+                                </div>
+                            </div>
+                            <div class="col-md-3 subscribe-col">
+                                <div class="card rounded-0 mb-4 subscribe-2 w-100 h-75">
+                                    <div class="card-img-top my-4 px-2">
+                                        {% include "home/includes/_logo-svg.html" %}
+                                    </div>
+                                    <div class="card-title text-center">
+                                        <h2>Subscribe!</h2>
+                                    </div>
+                                    <div class="card-body text-center">
+                                        <p class="lead">
+                                            Get the latest Silver<span style="color:#a31700">Chips</span> newsletter right in your inbox! Stay up to date with local and national news! Subscribe now!
+                                        </p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 {% endif %}
 
