--- a/home/static/home/styles/styles.scss
+++ b/home/static/home/styles/styles.scss
@@ -53,7 +53,7 @@ html {
         width: 100%;
         padding-top: 75%;
         @media (min-width: 992px) {
-            padding-top: 56.25%;
+            padding-top: 42.8571%;
         }
     }
 
@@ -97,10 +97,14 @@ html {
 
     .card-body {
         position: absolute;
-        top: 0;
         bottom: 0;
         left: 0;
         right: 0;
+
+        background: -moz-linear-gradient(top, rgba(255,255,255,0) 0%, rgba(17,5,5,0.25) 100%);
+        background: -webkit-linear-gradient(top, rgba(255,255,255,0) 0%,rgba(17,5,5,0.25) 100%);
+        background: linear-gradient(to bottom, rgba(255,255,255,0) 0%,rgba(17,5,5,0.25) 100%);
+        filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00ffffff', endColorstr='#40110505',GradientType=0 );
 
         .feature-title a, .lead, a {
             display: inline-block;
@@ -193,6 +197,25 @@ html {
     }
 }
 
+.section-card-2 {
+    box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
+
+    .card-body {
+        .story-created { font-size: 0.75rem; }
+        h4 a { font-family: $fugaz-one; }
+    }
+}
+
+.subscribe-col {
+    .card .card-img-top {
+        svg g {
+            display: block;
+            fill: $site-gray;
+            margin-top: auto;
+            margin-bottom: auto;
+        }
+    }
+}
 
 /* Social Media Sidebar */
 .social-media-sidebar {
