--- a/home/static/home/styles/_custom-settings.scss
+++ b/home/static/home/styles/_custom-settings.scss
@@ -106,3 +106,29 @@ $grid-breakpoints: (
         @return $site-white;
     }
 }
+
+
+
+//.card-columns-compact {
+//  @include media-breakpoint-only(xs) {
+//    column-count: 1;
+//  }
+//  @include media-breakpoint-only(md) {
+//    column-count: 2;
+//  }
+//  @include media-breakpoint-only(lg) {
+//    column-count: 3;
+//  }
+//}
+//
+//.card-columns-dense {
+//  @include media-breakpoint-only(xs) {
+//    column-count: 1;
+//  }
+//  @include media-breakpoint-only(md) {
+//    column-count: 3;
+//  }
+//  @include media-breakpoint-only(lg) {
+//    column-count: 5;
+//  }
+//}
