--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -1,44 +1,44 @@
 {% extends "home/base.html" %}
 
 {% block title %}Home{% endblock %}
-
+{% load home %}
 {% load static %} <!-- FOR TESTING - IMAGES -->
 
 {% block content %}
-    {% include "home/includes/index-sm-sidebar.html" %}
-            {% for section in section_roots %}
-                {% if section.name == "news" %}
-                <div id="{{ section.title }}" class="medium-container">
-                    <h2 class="container display-4 mb-4 py-2 text-center text-uppercase section-header"><a href="{% url "home:view_section" section.name %}">{{ section.title }}</a></h2>
-                    
-                    <div class="row mb-4">
-                        <div class="col-md-3 section-recently-0">
-                            <h1 class="recently">Recently...</h1>
-                            <hr>
-                            {% for story in section.all_stories.all|slice:"7"  %}
-                                <div>
-                                    <h5 class="title"><a href="{% url "home:view_content" story.pk %}">{{ story.title|safe }}</a></h4>
-                                    <p class="in-section"><a href="{% url "home:view_section" story.section.name %}" class="solid-link">{{ story.section.title }}</a> | {{ story.created }}</p>
-                                    <hr>
-                                </div>
-                            {% endfor %}
-                        </div>
-                        <div class="col-md-9">
-                            {% for story in section.all_stories.all|slice:"1" %}
-                                <div class="row section-featured-0 mb-2">
-                                    <img class="featured-img" src="{% static "home/images/bird.jpg" %}" alt="img not found">
-                                    <div class="content">
-                                        <h2 class="text-center mt-4 feature-title"><a href="{% url "home:view_content" story.pk %}">{{ story.title|safe }}</a></h2>
-                                        <h6 class="text-center py-2">{% include "home/utils/authors.html" with content=story %} | {{ story.created }}</h6>
-                                    </div>
-                                </div>
-                            {% endfor %}
-                            <div class="row">
-                            {% for story in section.all_stories.all|slice:"1:5"%}
-                                {% if not forloop.counter|divisibleby:"2" %}<div class="col-md-6 px-0">{% endif %}
-                                    <div class="card mb-2 rounded-0 section-card-0">
-                                        <div class="img-wrapper">
-                                            <img class="card-img-top mx-auto rounded-0 d--block" src="{% if forloop.counter|divisibleby:"4"  %}
+  {% include "home/includes/index-sm-sidebar.html" %}
+
+  <div class="container">
+    {% for section in main_sections %}
+      <h1 class="container display-4 mb-4 py-2 text-center text-uppercase section-header"><a href="{% url "home:view_section" section.name %}">{{ section.title }}</a></h1>
+
+      <div class="row mb-4">
+        <div class="col-md-3 section-recently-0">
+          <h1 class="recently">Recently...</h1>
+          <hr>
+          {% for story in section.all_stories.all|slice:"7"  %}
+            <div>
+              <h5 class="title"><a href="{% url "home:view_content" story.pk %}">{{ story.title|safe }}</a></h4>
+                <p class="in-section"><a href="{% url "home:view_section" story.section.name %}" class="solid-link">{{ story.section.title }}</a> | {{ story.created }}</p>
+                <hr>
+            </div>
+          {% endfor %}
+        </div>
+        <div class="col-md-9">
+          {% for story in section.all_stories.all|slice:"1" %}
+            <div class="row section-featured-0 mb-2">
+              <img class="featured-img" src="{% static "home/images/bird.jpg" %}" alt="img not found">
+              <div class="content">
+                <h2 class="text-center mt-4 feature-title"><a href="{% url "home:view_content" story.pk %}">{{ story.title|safe }}</a></h2>
+                <h6 class="text-center py-2">{% include "home/utils/authors.html" with content=story %} | {{ story.created }}</h6>
+              </div>
+            </div>
+          {% endfor %}
+          <div class="row">
+            {% for story in section.all_stories.all|slice:"1:5"%}
+              {% if not forloop.counter|divisibleby:"2" %}<div class="col-md-6 px-0">{% endif %}
+            <div class="card mb-2 rounded-0 section-card-0">
+              <div class="img-wrapper">
+                <img class="card-img-top mx-auto rounded-0 d--block" src="{% if forloop.counter|divisibleby:"4"  %}
                                                 {% static "home/images/img_4.jpg" %}
                                                 {% elif forloop.counter|divisibleby:"3" %}
                                                 {% static "home/images/iceberg.jpg" %}
@@ -47,42 +47,29 @@
                                                 {% else %}
                                                 {% static "home/images/img_2.jpg" %}
                                                 {% endif %}"  alt="featurette-img"/>
-                                        </div>
-                                        <div class="card-body">
-                                                <h6 class="authors d-inline-block">{% include "home/utils/authors.html" with content=story %}</h6>
-                                                <h6 class="d-inline-block w-auto text-left">{{ story.created }}</h6>
-                                                <h4 class="card-title"><a href="{% url "home:view_content" story.pk %}" class="solid-link">{{ story.title|safe }}</a></h4>
-                                        </div>
-                                    </div>
-                                {% if forloop.counter|divisibleby:"2" %}</div>{% endif %}
-                            {% endfor %}
-                            </div>
-                        </div>
-                    </div>
-                </div>
+              </div>
+              <div class="card-body">
+                <h6 class="authors d-inline-block">{% include "home/utils/authors.html" with content=story %}</h6>
+                <h6 class="d-inline-block w-auto text-left">{{ story.created }}</h6>
+                <h4 class="card-title"><a href="{% url "home:view_content" story.pk %}" class="solid-link">{{ story.title|safe }}</a></h4>
+              </div>
+            </div>
+            {% if forloop.counter|divisibleby:"2" %}</div>{% endif %}
+            {% endfor %}
+          </div>
+        </div>
+      </div>
+    {% endfor %}
 
-                {% elif section.name == "lifestyle" %}
-                    <div id="{{ section.title }}">
-                        <h2 class="container display-4 mb-4 py-2 text-center text-uppercase section-header"><a href="{% url "home:view_section" section.name %}">{{ section.title }}</a></h2>
+    {% for section in feature_sections %}
+      <h1 class="display-4 mb-4 py-2 text-center text-uppercase section-header"><a href="{{ section.get_absolute_url }}">{{ section.title }}</a></h1>
 
-                        <div class="section-featured-1 mb-4 my-0 py-0">
-                            {% for story in section.all_stories.all|slice:"1" %}
-                                <img class="featured-img img-fluid" src="{% static "home/images/iceberg.jpg" %}" alt="image not found"/>
-
-                                <div class="content container text-center">
-                                    <h2 class="display-4 mt-5 feature-title"><a href="{% url "home:view_content" story.pk %}">{{ story.title|safe }}</a></h4>
-                                    <h6 class="lead py-1">{% include "home/utils/authors.html" with content=story %} | {{ story.created }}</h6>
-                                </div>
-                            {% endfor %}
-                        </div>
-
-                        <div class="container-fluid"><div class="row">
-                            {% for story in section.all_stories.all|slice:"1:7" %}
-                                {% if not forloop.counter|divisibleby:"2" %}<div class="col-md-4">{% endif %}
-
-                                        <div class="card align-middle rounded-0 mb-4 section-card-1">
-                                            <div class="img-wrapper">
-                                                <img class="card-img-top mx-auto rounded-0 d-block" src="{% if forloop.counter|divisibleby:"4"  %}
+      {% see_content section.all_stories 6 %}
+      <div class="card-columns">
+        {% for content in new_content %}
+          <div class="card align-middle rounded-0 mb-4 section-card-1">
+            <div class="img-wrapper">
+              <img class="card-img-top mx-auto rounded-0 d-block" src="{% if forloop.counter|divisibleby:"4"  %}
                                                     {% static "home/images/img_4.jpg" %}
                                                  {% elif forloop.counter|divisibleby:"3" %}
                                                     {% static "home/images/bird.jpg" %}
@@ -91,81 +78,83 @@
                                                  {% else %}
                                                     {% static "home/images/grass.jpg" %}
                                                  {% endif %}"  alt="featurette-img"/>
-                                             </div>
-                                             <div class="in-section">
-                                                 <a href="{% url "home:view_section" story.section.name %}" class="solid-link">{{ story.section.title }} </a>
-                                             </div>
-                                             <div class="card-body">
-                                                 <h6 class="authors font-weight-bold">{% include "home/utils/authors.html" with content=story %}</h6>
-                                                 <p class="story-created">{{ story.created }}</p>
-                                                 <h4 class="card-title"><a href="{% url "home:view_content" story.pk %}" class="solid-link">{{ story.title|safe }}</a></h4>
-                                                 <p>
-                                                   {{ story.lead|safe }}
-                                                 </p>
-                                             </div>
-                                        </div>
+            </div>
+            {% if section != content.section %}
+              <div class="in-section">
+                <a href="{{ content.section.get_absolute_url }}" class="solid-link"> In {{ content.section.title }} </a>
+              </div>
+            {% endif %}
+            <div class="card-body">
+              <h6 class="authors font-weight-bold">{% include "home/utils/authors.html" with content=content %}</h6>
+              <p class="story-created">{{ content.created }}</p>
+              <h4 class="card-title"><a href="{{ content.get_absolute_url }}" class="solid-link">{{ content.title|safe }}</a></h4>
+              <p>
+                {{ content.lead|safe }}
+              </p>
+            </div>
+          </div>
+        {% endfor %}
+      </div>
 
-                                {% if forloop.counter|divisibleby:"2" %}</div>{% endif %}
-                            {% endfor %}
-                        </div></div>
-                        
-                        <hr class="mt-3 mb-5" />
-                    </div>
+      <hr class="mt-3 mb-5" />
+    {% endfor %}
 
-                {% elif section.name == "sports" %}
-                    <h2 class="container display-4 mb-4 py-2 text-center text-uppercase section-header"><a href="{% url "home:view_section" section.name %}">{{ section.title }}</a></h2>
+    {% for section in list_sections %}
+      <h1 class="display-4 mb-4 py-2 text-center text-uppercase section-header"><a href="{{ section.get_absolute_url }}">{{ section.title }}</a></h1>
 
-                    <div class="medium-container">
-                        <div class="row">
-                            <div class="col-md-9">
-                                <div class="row">
-                                    {% for story in section.all_stories.all|slice:"6" %}
-                                        {% if forloop.first or forloop.counter|divisibleby:"4" %}<div class="col-6">{% endif %}
+      {% see_content section.all_stories 12 %}
+      {% for content in new_content %}
+        <div class="row">
+          <div class="col-2">
+            <img class="img-fluid" src="{% static "home/images/chair.jpg" %}"/>
+          </div>
+          <div class="col-10">
+            {% include "home/utils/story_summary.html" with story=content %}
+          </div>
+        </div>
+        {% if not forloop.last %}<hr/>{% endif %}
+      {% endfor %}
+    {% endfor %}
 
-                                            <div class="card align-middle rounded-0 mb-4 section-card-2">
-                                                <div class="card-body">
-                                                    <div class="card-body-top d-inline-block mb-3">
-                                                            <img class="card-img-top mx-auto rounded-0 d-block" src="{% if forloop.counter|divisibleby:"4"  %}
-                                                                {% static "home/images/img_4.jpg" %}
-                                                                {% elif forloop.counter|divisibleby:"3" %}
-                                                                {% static "home/images/bird.jpg" %}
-                                                                {% elif forloop.counter|divisibleby:"2"  %}
-                                                                {% static "home/images/chair.jpg" %}
-                                                                {% else %}
-                                                                {% static "home/images/grass.jpg" %}
-                                                                {% endif %}"  alt="featurette-img"/>
-                                                    </div>
-                                                    <div class="card-body-bottom d-inline-block">
-                                                        <h6 class="authors font-weight-bold">{% include "home/utils/authors.html" with content=story %}</h6>
-                                                        <p class="story-created">{{ story.created }}</p>
-                                                        <h4 class="card-title"><a href="{% url "home:view_content" story.pk %}" class="solid-link">{{ story.title|safe }}</a></h4>
-                                                    </div>
-                                                </div>
-                                            </div>
+    {% for section in compact_sections %}
+      <h1 class="display-4 mb-4 py-2 text-center text-uppercase section-header"><a href="{{ section.get_absolute_url }}">{{ section.title }}</a></h1>
 
-                                        {% if forloop.counter == 3 or forloop.last %}</div>{% endif %}
-                                    {% endfor %}
-                                </div>
-                            </div>
-                            <div class="col-md-3 subscribe-col">
-                                <div class="card rounded-0 mb-4 subscribe-2 w-100 h-75">
-                                    <div class="card-img-top my-4 px-2">
-                                        {% include "home/includes/_logo-svg.html" %}
-                                    </div>
-                                    <div class="card-title text-center">
-                                        <h2>Subscribe!</h2>
-                                    </div>
-                                    <div class="card-body text-center">
-                                        <p class="lead">
-                                            Get the latest Silver<span style="color:#a31700">Chips</span> newsletter right in your inbox! Stay up to date with local and national news! Subscribe now!
-                                        </p>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                {% endif %}
+      <div class="card-columns card-columns-compact">
+        {% see_content section.all_stories 12 %}
+        {% for content in new_content %}
+          <div class="card">
+            <div class="card-body row">
+              <div class="col-3 pr-0">
+                <img class="img-fluid" src="{% static "home/images/chair.jpg" %}"/>
+              </div>
+              <div class="col-9">
+                <h5>{{ content.title }}</h5>
+                <h6><span class="text-muted">By</span> {% include "home/utils/authors.html" with content=content %}</h6>
+              </div>
+            </div>
+          </div>
+        {% endfor %}
+      </div>
+    {% endfor %}
 
+    <div class="card-columns card-columns-dense">
+      {% for section in dense_sections %}
+        <div class="card">
+          <div class="card-header">
+            <h5 class="card-title">{{ section.title }}</h5>
+          </div>
+          <ul class="list-group list-group-flush">
+            {% see_content section.all_stories 5 %}
+            {% for content in new_content %}
+              <li class="list-group-item">
+                <a class="solid-link h6" href="{{ content.get_absolute_url }}">{{ content.title }}</a>
+              </li>
             {% endfor %}
-            <script src="{% static "home/scripts/index.js" %}"></script>
+          </ul>
+        </div>
+      {% endfor %}
+    </div>
+  </div>
+
+  <script src="{% static "home/scripts/index.js" %}"></script>
 {% endblock %}
