--- a/home/templates/home/section.html
+++ b/home/templates/home/section.html
@@ -13,7 +13,7 @@
     <hr class="section-separator">
     {% for subsection, stories in subsections %}
       {% if stories.count > 0 %}
-        {% see_content stories 5 %}
+        {% reserve_content stories 5 %}
 
         <div class="row">
           <div class="col-md-2">
