--- a/home/templates/home/about/about.html
+++ b/home/templates/home/about/about.html
@@ -104,12 +104,20 @@
       Mathematics Address. Johri and Photo Staff Editor Emma Howells represented Silver
       Chips Online at the White House for this event.
     </p><p>
-      Some of the current products of Silver Chips Online include a new site design (to be
-      released soon), an extensive social media campaign, expanded blog categories, and a
+      From 2014 to 2017, some of Silver Chips Online's projects included an extensive social media campaign, expanded blog categories, and a
       #Blazers section. With continued coverage of the school and its surrounding area, the
-      paper continues to uphold its rank as one of the best in the nation and increase its ability
-      to report on all Blair events and other information of interest to the Blair community.
-    </p>
+      paper continued to uphold its rank as one of the best in the nation and increase its ability
+      to report on all Blair events and other information of interest to the Blair community. Its editors-in-chief included
+      Zoe Johnson and Dylan Ahunhodjaev (2014-15), Max Foley-Keene and Eleanor Linafelt (2015-16), and Eleanor Cook
+      and Randima Herath (2016-17).
+    </p><p>Starting in 2016, Silver Chips Online collaborated with the Montgomery Blair Sysops to completely redevelop
+      and redesign its website. The effort was undertaken with an eye on future maintenance and flexibility,
+      promoting content visibility and accessibility, and a freshened, modern, streamlined user experience and look-and-feel.
+      A team of Sysops, led by Noah Singer ('18) and including Mark Jung ('17), Noah Kim ('18), Simon Chervenak ('16),
+      and Liam DeVoe ('16), replaced the old PHP website with a completely new, open source, Python/Django platform.
+      They worked with editors-in-chief Mehana Daftary and Amy Forbsacka (2017-18) and Nobline Yoo and Rebecca Wessel
+      (2018-19), who hope that the new website will help them restructure Silver Chips Online to better serve the Blair community.
+  </p>
 
     <h3>Contact Us</h3>
     <h5>Mail</h5>
