--- a/staff/templates/staff/index.html
+++ b/staff/templates/staff/index.html
@@ -2,49 +2,55 @@
 {% load core %}
 
 {% block content %}
-    <h2>{% block title %}Staff Dashboard{% endblock %}</h2>
+  <h2>{% block title %}Staff Dashboard{% endblock %}</h2>
 
-    <p>Welcome, {{ request.user.get_full_name }}, to the SilverChips staff dashboard! Here's where you'll be able to access, create, review, and edit
-        content on the site, as well as manage your profile and personal information.</p>
+  <p>Welcome, {{ request.user.get_full_name }}, to the SilverChips staff dashboard! Here's where you'll be able to access, create, review, and edit
+    content on the site, as well as manage your profile and personal information.</p>
 
-    <h3>Site</h3>
-    <a class="btn btn-info btn-lg btn-block my-3" href="{% url "staff:content:list" %}">Content <i class="fas fa-list-ul"></i></a>
-
-    <h3>Personal</h3>
-
-    <div class="row">
-        {% if user|can:"core.edit_profile" %}
-        <div class="col-sm-6 col-xs-12">
-            <a class="btn btn-info btn-lg btn-block my-3" href="{% url "staff:users:self_manage" %}">Edit Profile <i class="fas fa-user"></i></a>
-        </div>
-        {% endif %}
+  <h3>Site</h3>
+  <div class="row">
+    <div class="col-sm-6 col-xs-12">
+      <a class="btn btn-info btn-lg btn-block my-3" href="{% url "staff:content:list" %}">Content <i class="fas fa-list-ul"></i></a>
     </div>
+    {% if user|can:"core.edit_profile" %}
+      <div class="col-sm-6 col-xs-12">
+        <a class="btn btn-secondary btn-lg btn-block my-3" href="{% url "staff:users:self_manage" %}">Manage Account <i class="fas fa-user"></i></a>
+      </div>
+    {% endif %}
+  </div>
 
+
+
+  {% if user|can:"auth.manage_users" or user.is_superuser %}
     <h3>Danger Zone</h3>
     {% if user|can:"auth.manage_users" %}
-    <a class="btn btn-danger btn-lg btn-block my-3" href="{% url "staff:users:list" %}">User List <i class="fas fa-users"></i></a>
+      <a class="btn btn-danger btn-lg btn-block my-3" href="{% url "staff:users:list" %}">User List <i class="fas fa-users"></i></a>
     {% endif %}
-{# STUB_COMMENT #}
+    {% if user.is_superuser %}
+      <a class="btn btn-danger btn-lg btn-block my-3" href="{% url "admin:index" %}">Django Admin <i class="fas fa-unlock-alt"></i></a>
+    {% endif %}
+  {% endif %}
+  {# STUB_COMMENT #}
 
-    <h3>User Information</h3>
+  <h3>User Information</h3>
 
-    <p>Your name is {{ request.user.get_full_name }}; your username is <code>{{ request.user.username }}</code>.</p>
+  <p>Your name is {{ request.user.get_full_name }}; your username is <code>{{ request.user.username }}</code>.</p>
 
-    <p>You belong to the following groups:</p>
-    <ul>
-        {% for group in request.user.groups.all %}
-            <li><code>{{ group.name }}</code></li>
-        {% empty %}
-            <li>Sorry, you don't belong to any groups.</li>
-        {% endfor %}
-    </ul>
+  <p>You belong to the following groups:</p>
+  <ul>
+    {% for group in request.user.groups.all %}
+      <li><code>{{ group.name }}</code></li>
+    {% empty %}
+      <li>Sorry, you don't belong to any groups.</li>
+    {% endfor %}
+  </ul>
 
-    <p>and hold the following permissions:</p>
-    <ul>
-        {% for permission in request.user.get_all_permissions %}
-            <li><code>{{ permission }}</code></li>
-        {% empty %}
-            <li>Sorry, you don't have any permissions.</li>
-        {% endfor %}
-    </ul>
+  <p>and hold the following permissions:</p>
+  <ul>
+    {% for permission in request.user.get_all_permissions %}
+      <li><code>{{ permission }}</code></li>
+    {% empty %}
+      <li>Sorry, you don't have any permissions.</li>
+    {% endfor %}
+  </ul>
 {% endblock %}
