revising import script

--- a/home/templates/home/content.html
+++ b/home/templates/home/content.html
@@ -45,7 +45,7 @@
       <div class="col-md-3 text-right">
         <a href="https://www.facebook.com/dialog/share?display=popup&href=https://silverchips.mbhs.edu/content/{{ content.pk }}"
            target="_blank"><i class="fab fa-facebook-square fa-2x mx-1" aria-hidden="true"></i></a>
-        <a href="https://twitter.com/intent/tweet?text=Check%20out%20this%20{{ content.descriptor }}%2C%20%22{{ content.title|urlencode }}%22%2C%20on%20SilverChips%20Online%21&hashtags=SilverChipsOnline&url=https%3A%2F%2Fsco.mbhs.edu%2Fc%2F{{ content.pk }}&via=mbhsSCO"
+        <a href="https://twitter.com/intent/tweet?text=Check%20out%20this%20{{ content.descriptor }}%2C%20%22{{ content.title|urlencode }}%22%2C%20on%20Silver Chips%20Online%21&hashtags=Silver ChipsOnline&url=https%3A%2F%2Fsco.mbhs.edu%2Fc%2F{{ content.pk }}&via=mbhsSCO"
            target="_blank"><i class="fab fa-twitter-square fa-2x mx-1" aria-hidden="true"></i></a>
       </div>
     </div>
