updates to homepage

--- a/home/static/home/styles/imports/_footer-styles.scss
+++ b/home/static/home/styles/imports/_footer-styles.scss
@@ -43,7 +43,7 @@
         div {
             display: block;
             font-weight: bold;
-            .fa {
+            .fas {
                 background-color: $site-red;
                 color: $site-white;
                 font-size: 25px;
