--- a/home/templates/home/base.html
+++ b/home/templates/home/base.html
@@ -4,6 +4,7 @@
 <html>
     <head>
         <meta name="viewport" content="width=device-width, initial-scale=1">
+        <meta http-equiv="Content-type" content="text/html; charset=utf-8" />
         <title>{% block title %}{% endblock %} | Silver Chips</title>
 
         {% load staticfiles %}
