--- a/home/templates/home/profile.html
+++ b/home/templates/home/profile.html
@@ -31,8 +31,8 @@
       <h2>Stories ({{ stories.count }})</h2>
       <hr/>
 
-      {% for content in stories %}
-        {% include "home/content/summary.html" with content=content %}
+      {% for story in stories %}
+        {% include "home/content/summary.html" with content=story %}
       {% endfor %}
     {% endif %}
 
@@ -42,9 +42,7 @@
       <hr/>
 
       {% for image in images %}
-        <h4><a href="{% url "home:view_image" image.pk %}" class="solid-link">{{ image.title|safe }}</a></h4>
-        {{ image.created }}
-        <p class="text-muted">{{ image.description|safe }}</p>
+        {% include "home/content/summary.html" with content=image %}
       {% endfor %}
     {% endif %}
 
@@ -54,9 +52,7 @@
       <hr/>
 
       {% for video in videos %}
-        <h4><a href="{% url "home:view_video" audio.pk %}" class="solid-link">{{ video.title|safe }}</a></h4>
-        {{ video.created }}
-        <p class="text-muted">{{ video.description|safe }}</p>
+        {% include "home/content/summary.html" with content=video %}
       {% endfor %}
     {% endif %}
 
@@ -66,9 +62,7 @@
       <hr/>
 
       {% for audio in audios %}
-        <h4><a href="{% url "home:view_audio" audio.pk %}" class="solid-link">{{ audio.title|safe }}</a></h4>
-        {{ audio.created }}
-        <p class="text-muted">{{ audio.description|safe }}</p>
+        {% include "home/content/summary.html" with content=audio %}
       {% endfor %}
     {% endif %}
 
@@ -77,10 +71,8 @@
       <h2>Images ({{ audios.count }})</h2>
       <hr/>
 
-      {% for audio in audios %}
-        <h4><a href="{% url "home:view_audio" audio.pk %}" class="solid-link">{{ audio.title|safe }}</a></h4>
-        {{ audio.created }}
-        <p class="text-muted">{{ audio.description|safe }}</p>
+      {% for gallery in galleries %}
+        {% include "home/content/summary.html" with content=gallery %}
       {% endfor %}
     {% endif %}
   </div>
