--- a/home/templates/home/content/summary.html
+++ b/home/templates/home/content/summary.html
@@ -1,4 +1,6 @@
-<h4 class="title"><a href="{{ content.get_absolute_url }}" class="solid-link">{{ content.title|safe }}</a></h4>
+{% load home %}
+
+<h4 class="title"><a href="{{ content.get_absolute_url }}" class="solid-link">{{ content|qualified_title }}</a></h4>
 <h6 class="authors"><span class="text-muted">By</span> {% include "home/utils/authors.html" with content=content %} <span class="text-muted">|</span>
 {{ content.created }}
 {% if content.section %}<span class="text-muted">| In</span> <a href="{% url "home:view_section" content.section.name %}" class="solid-link">{{ content.section.title }} &raquo;</a>{% endif %}</h6>
